--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,9 @@ requests==2.31.0
 schedule==1.2.0
 python-dateutil==2.8.2
 Werkzeug==2.3.7
+Pillow==12.0.0
+onnxruntime==1.23.2
+rembg==2.0.68
 
 # Дополнительные зависимости для продакшена
 gunicorn==21.2.0
